[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/ProductSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/bg/BG2.png" type="Texture" id=2]
[ext_resource path="res://fonts/dynamicFonts/word.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/dynamicFonts/sentence.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://displayScenes/QuizTutorial.gd" type="Script" id=6]
[ext_resource path="res://sprites/buttons/Next.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons/Next_down.png" type="Texture" id=8]
[ext_resource path="res://scenes/MusicPlayer.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="QuizTutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -253.5
margin_right = 480.0
margin_bottom = 253.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Greetings" type="Label" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
text = "Selamat datang dalam"
align = 1
valign = 1

[node name="QuizTitle" type="Label" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 960.0
margin_bottom = 191.0
custom_fonts/font = ExtResource( 3 )
text = "Quiz Tebak Kata"
align = 1
valign = 1

[node name="QuizTutorial" type="Label" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 960.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 1 )
text = "Petunjuk Quiz:
1. Pilih jawaban
2. Tekan submit
3. Tekan next

Dapatkan skor 80 atau lebih"
align = 1
valign = 1

[node name="Start" type="TextureButton" parent="VBoxContainer"]
margin_top = 454.0
margin_right = 960.0
margin_bottom = 518.0
rect_min_size = Vector2( 128, 64 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Back" parent="." instance=ExtResource( 5 )]
targetSceneName = "QuizMenu"

[node name="MusicPlayer" parent="." instance=ExtResource( 9 )]

[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_Start_button_down"]
